--- a/express/views/index.jade
+++ b/express/views/index.jade
@@ -1,5 +1,145 @@
-extends layout
-
-block content
-  h1= title
-  p Welcome to #{title}
+doctype html
+html(lang="es")
+	head
+		title Cafetol
+		meta(charset="utf-8")
+		meta(name="viewport" content="width=device-width, maximun-scale=1")
+		meta(name="description" content="cafetol")
+		meta(name="keywords" content="Cafetol, café, productos, cafe molido, cafe tostado")
+		link(rel="icon" href="images/iconob.png")
+		link(rel="image_src" href="images/logo.png")
+		link(rel="stylesheet" href="css/normalize.css")
+		link(rel="stylesheet" href="css/iconos/style.css")
+		link(rel="stylesheet" href="css/owl_carousel.css")
+		link(rel="stylesheet" href="css/owl_theme_min.css")
+		link(rel="stylesheet" href="css/style.css")
+		link(rel="stylesheet" href="css/inicio.css")
+		script(src="js/jquery_2_1_1.js")
+		script(src="js/owl_carousel_min.js")
+		script(src="js/scripag.js")
+	body
+		div(id="line")
+		header
+			article(id="redes")
+				a(href="" target="_blank")
+					span(class="icon-facebook2")
+				a(href="" target="_blank")
+						span(class="icon-instagram")
+			figure(id="logo")
+				a(href="")
+					img(src="images/logo.png" alt="logo")
+		article(id="mn_h")
+			div(id="btn_mov")
+				span(class="icon-menu")
+			nav(id="mnP")
+				ul
+					li
+						a(class="sull" href="") Inicio
+					li
+						a(href="nosotros") Nosotros
+					li(class="submen" data-num="1")
+						a(href="productos") Productos
+						ul(class="children1")
+							//tipos de menus sql
+							li
+								a(href="") tipos
+					li
+						a(href="novedades") Novedades
+					li
+						a(href="contacto") contacto
+					li
+						a(href="region") Región
+		section
+			article(class="migms")
+				figure(id="gnfg")
+					img(src="images/slider/cafe1.jpg" alt="cafe1")
+				article(id="gdos")
+					figure
+						img(src="images/slider/cafe2.jpg" alt="cafe2")
+					figure
+						img(src="images/slider/cafe3.jpg" alt="cafe3")
+			article(class="infem")
+				figure(id="emun")
+					img(src="images/cafever.jpg" alt="cafe4")
+				article(id="emdo")
+					article(class="owl-carousel owl-theme owl-loaded")
+						div(id="item")
+							div(class="hdos")
+								h2 Nosotros
+							article
+								p 
+									| Los municipios de Toledo y Labateca, cuna del Café Especial Toledo de Origen, 
+									| están localizados al suroriente del Departamento Norte de Santander, 
+									| a 94 kilómetros de la ciudad de Cúcuta, sobre las estribaciones de la cordillera oriental, 
+									| con una altura sobre el nivel del mar de 1.650 mts., 
+									| una temperatura que oscila entre los 12 y 18 °C. 
+									| La posición geográfica dentro del parque Nacional natural Tamá, 
+									| los vientos cálidos que llegan de los llanos Orientales, los ricos suelos volcánicos, 
+									| las condiciones climáticas, el cultivo bajo el bosque y una única cosecha en el año; 
+									| hacen que se produzca el Café Especial Toledo de Origen. Además, el don de sus habitantes, 
+									| sus lindos paisajes, su riqueza hídrica, el ambiente del Parque Tama, 
+									| su historia y la Fe en Dios; 
+									| hacen que muchos sientan el deseo de conocer esta tierra pródiga y bendita.
+						div(id="item")
+							div(class="hdos")
+								h2 Nosotros
+							article
+								p 
+									| Producir, procesar y comercializar Café Especial Toledo tostado y 
+									| molido en sus diferentes formas y presentaciones, conservando sus características, 
+									| manteniendo una excelente calidad, innovando en la presentación del producto, 
+									| brindando la mejor atención al cliente y mejorando continuamente la calidad de vida 
+									| de nuestros Asociados y sus Familias.
+						div(id="item")
+							div(class="hdos")
+								h2 Nosotros
+							article
+								p 
+									| La Asociación  Productora y  Comercializadora de Café  Especial Toledo -CAFETOL-, 
+									| al año 2018, será una organización consolidada productiva y competitiva, 
+									| sostenible e incluyente, con sentido de pertenencia, 
+									| posicionada comercialmente a nivel nacional e internacional.
+			div(class="htres")
+				h2 PRODUCTOS
+			article(class="tipos_cafes")
+				//dinamito ver tipos con img sql
+				figure
+					figcaption
+						h2
+						p
+						a(href="")
+		footer
+			article(class="flxfoot")
+				article(class="informc")
+					h2 Nosotros
+					p texto
+					div
+						span(class="icon-old-phone")
+						span +48 12 77 33 22
+					div
+						span(class="icon-mail")
+						span contact@dominio.com
+					div
+						span(class="icon-location")
+						span Vereda Santa Ana Kilometro 5 vía Toledo-Chinacota - Finca el cafetero
+					article(id="redes")
+						a(href="" target="_blank")
+							span(class="icon-facebook2")
+						a(href="" target="_blank")
+							span(class="icon-instagram")
+				article(class="contmsj")
+					form(action="#" method="post" class="columninput")
+						label(for="namct")
+							b Nombre
+						input(type="text" id="namct" required)
+						label(for="corct")
+							b Correo
+						input(type="email" id="corct" required)
+						label(for="txtct")
+							b Mensaje
+						textarea(id="txtct" rows="4" required)
+						div(id="msct")
+						div
+							input(type="submit" value="Enviar" id="nvmsct")
+			article(class="footfin") CONAXPORT © 2015 &nbsp;&nbsp;todos los derechos reservados &nbsp;- &nbsp;PBX (5) 841 733 &nbsp;&nbsp;Cúcuta - Colombia &nbsp;&nbsp;
+				a(href="http://conaxport.com/" target="_blank") www.conaxport.com
