--- a/express/views/layout.jade
+++ b/express/views/layout.jade
@@ -1,7 +1,52 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+html(lang="es")
+	head
+		title Cafetol
+		meta(charset="utf-8")
+		meta(name="viewport" content="width=device-width, maximun-scale=1")
+		meta(name="description" content="cafetol")
+		meta(name="keywords" content="Cafetol, café, productos, cafe molido, cafe tostado")
+		link(rel="icon" href="/images/iconob.png")
+		link(rel="image_src" href="/images/logo.png")
+		link(rel="stylesheet" href="/css/normalize.css")
+		link(rel="stylesheet" href="/css/iconos/style.css")
+		link(rel="stylesheet" href="/css/owl_carousel.css")
+		link(rel="stylesheet" href="/css/owl_theme_min.css")
+		link(rel="stylesheet" href="/css/style.css")
+		link(rel="stylesheet" href="/css/inicio.css")
+		script(src="/js/jquery_2_1_1.js")
+		script(src="/js/owl_carousel_min.js")
+		script(src="/js/scripag.js")
+	body
+		div(id="line")
+		header
+			article(id="redes")
+				a(href="" target="_blank")
+					span(class="icon-facebook2")
+				a(href="" target="_blank")
+						span(class="icon-instagram")
+			figure(id="logo")
+				a(href="")
+					img(src="images/logo.png" alt="logo")
+		article(id="mn_h")
+			div(id="btn_mov")
+				span(class="icon-menu")
+			nav(id="mnP")
+				ul
+					li
+						a(class="sull" href="") Inicio
+					li
+						a(href="nosotros") Nosotros
+					li(class="submen" data-num="1")
+						a(href="productos") Productos
+						ul(class="children1")
+							//tipos de menus sql
+							li
+								a(href="") tipos
+					li
+						a(href="novedades") Novedades
+					li
+						a(href="contacto") contacto
+					li
+						a(href="region") Región
+		block contenido
